# xmonad-config

./: xmonad-config.cabal  xmonad.hs
